Blender 2.75 crashes when I run my the game #45269

Closed
opened 2015-07-02 11:02:50 +02:00 by 3dvits@gmail.com · 9 comments

System Information
Operating system and graphics card
GNU/Linux Ubuntu 14.04 x86_64, Windows 7 x64

Blender Version
Broken: 2.75 c6b042b
Worked: 2.74 and lower

Short description of error
When I try to start my game, blender crashes

Exact steps for others to reproduce the error
Open attached file and press 'p', or press Start Game Engine from menu Game
Crash file:
gts2.crash.txt

Cleaned game file:
gts2.blend

**System Information** Operating system and graphics card GNU/Linux Ubuntu 14.04 x86_64, Windows 7 x64 **Blender Version** Broken: 2.75 c6b042b Worked: 2.74 and lower **Short description of error** When I try to start my game, blender crashes **Exact steps for others to reproduce the error** Open attached file and press 'p', or press Start Game Engine from menu Game Crash file: [gts2.crash.txt](https://archive.blender.org/developer/F199523/gts2.crash.txt) Cleaned game file: [gts2.blend](https://archive.blender.org/developer/F199524/gts2.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @VitaliiShmorgun

Added subscriber: @VitaliiShmorgun

Tested with RC1 and RC2, and both work well. No crashes. Crashes only release 2.75 c6b042b

Tested with RC1 and RC2, and both work well. No crashes. Crashes only release 2.75 c6b042b

This issue was referenced by db8ccc18f7

This issue was referenced by db8ccc18f7bfc97e8cd599cb42ce70e83f89d493
Sybren A. Stüvel self-assigned this 2015-07-02 12:08:25 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by c9d998707f

This issue was referenced by c9d998707f97a579315dc33246d022e484ccb09e

Added subscriber: @1000H

Added subscriber: @1000H

It says this is fixed, how do I go about downloading, installing a fix, because it happens for me(I just dl'd 2.75 last night, 11/24/2015)

It says this is fixed, how do I go about downloading, installing a fix, because it happens for me(I just dl'd 2.75 last night, 11/24/2015)

Why not download the latest verson (2.76b)?

Why not download the latest verson (2.76b)?
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#45269
No description provided.