Fix T45269: Blender 2.75 crashes when I run my the game

Velocity clamping on static objects caused a crash.